--- a/install.txt
+++ b/install.txt
@@ -1,5 +1,6 @@
 @sSteamCmdForcePlatformType linux
 login anonymous
 force_install_dir /steamcmd/rust
+app_info_update 1
 app_update 258550 validate
 quit
